--- a/baibao/Views/TV.xaml
+++ b/baibao/Views/TV.xaml
@@ -1,10 +1,12 @@
-﻿<phone:PhoneApplicationPage x:Class="baibao.Model.TV"
+﻿<phone:PhoneApplicationPage xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit"  x:Class="baibao.Model.TV"
                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                             xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
                             xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
                             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                            xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+                            xmlns:GalaSoft_MvvmLight_Command="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Extras.WP71" 
                             mc:Ignorable="d"
                             d:DesignWidth="480"
                             d:DesignHeight="768"
@@ -14,7 +16,7 @@
                             SupportedOrientations="Portrait"
                             Orientation="Portrait"
                             shell:SystemTray.IsVisible="True"
-                            DataContext="{Binding ViewModelName, Source={StaticResource Locator}}">
+                            DataContext="{Binding TV, Source={StaticResource Locator}}">
 
     <Grid x:Name="LayoutRoot"
           Background="Transparent">
@@ -37,9 +39,45 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel"
-              Grid.Row="1"
-              Margin="12,0,12,0"></Grid>
+        <Grid Grid.Row="1" Height="607" HorizontalAlignment="Left" Name="grid1" VerticalAlignment="Top" Width="480">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="160*" />
+                <ColumnDefinition Width="160*" />
+                <ColumnDefinition Width="160*" />
+            </Grid.ColumnDefinitions>
+            <toolkitPrimitives:LoopingSelector x:Name="selectorLeft" ItemMargin="5" ItemSize="160,160">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="{Binding ShowMessage, Mode=OneWay}">
+                        <GalaSoft_MvvmLight_Command:EventToCommand x:Name="selectChanged"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <toolkitPrimitives:LoopingSelector.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding name}" FontSize="40" Tag="{Binding id}" TextWrapping="Wrap"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </toolkitPrimitives:LoopingSelector.ItemTemplate>
+            </toolkitPrimitives:LoopingSelector>
+            <toolkitPrimitives:LoopingSelector Grid.Column="1" x:Name="selectorMiddle" ItemMargin="5" ItemSize="160,160">
+                <toolkitPrimitives:LoopingSelector.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding name}" FontSize="40" Tag="{Binding id}" TextWrapping="Wrap" />
+                        </StackPanel>
+                    </DataTemplate>
+                </toolkitPrimitives:LoopingSelector.ItemTemplate>
+            </toolkitPrimitives:LoopingSelector>
+            <toolkitPrimitives:LoopingSelector Grid.Column="2" x:Name="selectorRight" ItemMargin="5" ItemSize="160,160">
+                <toolkitPrimitives:LoopingSelector.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding name}" FontSize="40" Tag="{Binding id}" TextWrapping="Wrap" />
+                        </StackPanel>
+                    </DataTemplate>
+                </toolkitPrimitives:LoopingSelector.ItemTemplate>
+            </toolkitPrimitives:LoopingSelector>
+        </Grid>
     </Grid>
 
     <!--Sample code showing usage of ApplicationBar-->
